style(revisions): prevent buttons from overflowing

--- a/apps/client/src/widgets/dialogs/revisions.css
+++ b/apps/client/src/widgets/dialogs/revisions.css
@@ -63,17 +63,21 @@ body.mobile .revisions-dialog {
 }
 
 .revisions-dialog {
-    .file-preview-table {
-        th,
-        td {
-            padding: 0.25em 0;
-        }
+    .revision-title-buttons {
+        flex-shrink: 0;
     }
 
     .revision-content.type-file {
         display: flex;
         min-width: 0;
         min-height: 0;
+
+        .file-preview-table {
+            th,
+            td {
+                padding: 0.25em 0;
+            }
+        }
 
         .revision-file-preview {
             display: flex;
